add new api route for get wallet
